# fireducks-poc

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/fireducks_poc/: main.py
