[project]
authors = [{name = "Torstein Sørnes", email = "t.soernes@gmail.com"}]
dependencies = ["fireducks>=1.0.5,<2"]
description = "Fireducks in Docker Proof-of-Concept"
name = "fireducks_poc"
requires-python = ">= 3.12"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
fireducks_poc = { path = ".", editable = true }

[tool.pixi.tasks]
runfireducks = "python -m fireducks.pandas src/fireducks_poc/main.py"
